docs(pr16): mark security issue as fixed
Mark PR16-#2 (security issue) as fixed in PR branch.

Related: PR #16 validation

--- a/docs/maintainers/feedback/sourcery/pr16.md
+++ b/docs/maintainers/feedback/sourcery/pr16.md
@@ -94,7 +94,7 @@ Total Individual Comments: 12 + Overall Comments
 **Description**: This surfaces `str(e)` to clients, which can reveal DB details or stack info depending on the exception. Instead, log the full exception on the server and return a generic, user-safe message (optionally with a stable error code) in the response to avoid leaking internals.
 
 **Priority:** 🟠 HIGH | **Impact:** 🟠 HIGH | **Effort:** 🟢 LOW  
-**Action:** Fix now - security issue, prevents information leakage
+**Action:** ✅ Fixed - Security issue addressed (don't expose exception messages to clients)
 
 <details>
 <summary>Details</summary>
